# boto3_post_conditions

./: .coveragerc  .flake8  .mypy.ini  .pre-commit-config.yaml  .yamllint  Makefile  README.md  pyproject.toml
.github/: codeql-config.yml  dependabot.yml
.github/workflows/: release.yml  test.yml
boto3_post_conditions/: enforcer.py
tests/: __init__.py  test_enforcer.py  test_exceptions.py
tests/services/: __init__.py  test_secretsmanager.py  test_ssm.py
tests/services/recordings/ssm/: test_ssm_integration
