[tool.poetry]
name = "boto3-post-conditions"
version = "0.3.1"
description = "Remove retry logic from boto3 clients by enforcing post-conditions."
readme = "README.md"
repository = "https://github.com/jeking3/boto3-post-conditions/"
keywords = ["boto3", "aws", "eventual consistency", "retry"]
authors = ["James E. King III <jking@apache.org>", "CloudTruth Developers <dev@cloudtruth.com>"]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = ">=3.8"
boto3 = "^1.20"
retry = "^0.9.2"

[tool.poetry.dev-dependencies]
bandit = "^1.7.2"
boto3-stubs = "^1.23.1"
coverage = "^6.5.0"
flake8 = "^5.0.4"
flake8-sfs = "^0.0.3"
moto = "^3.1.5"
mypy = "^0.942"
mypy-boto3-secretsmanager = "^1.26.0"
mypy-boto3-ssm = "^1.24.39"
pre-commit = "^2.20.0"
types-retry = "^0.9.9"
vcrpy = "^4.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
# https://github.com/python-poetry/poetry/issues/3456
name = "pypi-public"
url = "https://pypi.org/simple/"
priority = "primary"
